--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple_Project</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
    <div class="nav">
-    <img class="logoimg" src="logo_img.png">
+    <img class="logoimg" src="./img/logo_img.png">
     <div class="catigory">
         <h2>IPL</h2>
         <h2>Finance</h2>
@@ -33,7 +33,7 @@
 
 <template class="temp" id="tmx">
     <div class="card">
-        <img  id="newsimg" class="cardimg" src="card_imge.jpg" alt="">
+        <img  id="newsimg" class="cardimg" src="./img/card_imge.jpg" alt="">
         <h3 class="heading">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</h3>
         <h5 class="publ">Publisher&Date</h5>
         <p class="newscon">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur repudiandae,s.</p>
@@ -43,6 +43,6 @@
 
 
 
-   <script src="script.js"></script> 
+   <script src="./js/script.js"></script> 
 </body>
 </html>
